# NMBS-Mobi

./: README.md
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Taskfile.yaml  config.yaml  pyproject.toml
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/.devcontainer/: devcontainer.json
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/.github/: copilot-instructions.md
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/.github/acl/: access.yml
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/.github/agents/: code-review-subagent.agent.md  implement-subagent.agent.md  planning-subagent.agent.md  spec-review-subagent.agent.md
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/.github/compliance/: inventory.yml
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/.github/workflows/: ci.yaml
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/docs/: architecture.md  copilot.md  exec-deck-2slide.html  exec-deck.html
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/docs/adrs/: 2026-01-26-Use-FastAPI.md  2026-01-26-Use-Python.md  2026-01-27-Secure-WebSocket-Connection.md  2026-01-27-Use-VoiceLive-with-Noise-Suppression.md  2026-01-28-Use-Semantic-Kernel-For-Agentic-Framework.md  2026-02-11-Define-Span-Hierarchy-And-Attribute-Conventions.md  README.md
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/eval/: README.md  config.yaml  pyproject.toml  scenarios.jsonl
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/eval/tests/: conftest.py  test_config.py  test_conversation_simulator.py  test_customer.py  test_function_call_evaluator.py  test_main.py  test_models.py  test_runner.py  test_transport.py  test_voice.py
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/infra/: main.tf  outputs.tf  plan.exit  terraform.tfvars.example  tfplan2  tfplan_setup  variables.tf
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/infra/scripts/: README.md  purchase_phone_number.py
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/src/ai_contact_centre_solution_accelerator/: config.py  main.py
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/tests/: __init__.py  conftest.py  test_config.py
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/tests/agents/: test_agents.py
ai-contact-center-solution-accelerator-main/ai-contact-center-solution-accelerator-main/tests/auth/: test_acs_auth.py  test_dependencies.py
(+66 files in other folders)
