[project]
name = "customer-verification-mcp-server"
version = "1.0.0"
description = "Example MCP server for customer verification"
requires-python = ">=3.12"

dependencies = [
    "fastmcp>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
